--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -55,7 +55,7 @@
     </types>
     <types>
         <members>Account-Account Layout</members>
-        <members>Account-OEM/Service Supporter Account Page Layout</members>
+        <members>Account-OEM Service Supporter Layout</members>
         <members>Case-Case Layout</members>
         <members>Asset-Asset Layout</members>
         <members>Preventive_Maintanenace__c-Preventive Maintanenace Layout</members>
